Fix Sponsor Label overflow

--- a/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
+++ b/force-app/main/default/aura/StudyListViewItem/StudyListViewItem.css
@@ -79,6 +79,9 @@
     margin-bottom: 5px;
     font-size: 12px;
     line-height: 20px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .THIS .slvi-top-container .study-options {
